--- a/src/main/java/com/SOR2/ADMIN_PAGE/adminLayout.css
+++ b/src/main/java/com/SOR2/ADMIN_PAGE/adminLayout.css
@@ -25,3 +25,25 @@ tr:nth-child(odd){
 .pagingNavigator{
     padding-left: 800px;
 }
+
+
+.messageTable{
+	padding-top: 50px;
+}
+
+@media (min-width: 768px){
+    .navbar-nav{
+        margin: 0 auto;
+        display: table;
+        table-layout: fixed;
+        float:none;
+    }
+}
+
+.container.menu{
+	float:left;
+}
+
+.navbar-nav li{
+	padding-left: 5px;
+}
