--- a/src/main/java/com/SOR2/ADMIN_PAGE/adminLayout.css
+++ b/src/main/java/com/SOR2/ADMIN_PAGE/adminLayout.css
@@ -6,16 +6,20 @@ table{
 
 td{
     overflow: hidden;
+    text-align: center;
+    padding: 13px !important;
 }
 
 th{
     background-color: #0C6395;
     color: #fff;
+    text-align: center !important; /* not nice, but easier than going through wicket/bootstrap css**/
+    font-size: 20px;
+    padding: 17px !important; /* sorry, not sorry**/
 }
 
 tr:nth-child(even){
     background-color: rgba(11, 99, 149, 0.4);
-    ;
 }
 
 tr:nth-child(odd){
@@ -47,3 +51,4 @@ tr:nth-child(odd){
 .navbar-nav li{
 	padding-left: 5px;
 }
+
